--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -2,92 +2,115 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-.navbar {
+    scroll-behavior: smooth;
+  }
+  
+  .navbar {
     display: flex;
     justify-content: space-between;
-    width: 100%;
-    padding: 0 60px 0 60px;
-    height: 73px;
-    overflow: hidden;
     align-items: center;
-    
-    backdrop-filter: blur(10px); /* Apply the blur effect */
-    position: sticky ;
-    background-color: rgba(255, 255, 255, 0.658);
+    width: 100%;
+    padding: 0 60px;
+    height: 73px;
+    position: sticky;
     top: 0;
-    z-index: 1;
-}
-/* @media (min-width: 1024px){
-    .navbar .navigation {
-        display: flex;
-        gap: 80px;
-    }
-
-} */
-.navbar .logo {
+    background-color: rgba(255, 255, 255, 0.658);
+    backdrop-filter: blur(10px); /* Apply the blur effect */
+    z-index: 999;
+  }
+  
+  /* Logo Styling */
+  .navbar .logo {
     width: 49px;
-}
-.navbar .navigation {
+  }
+  
+  .navbar .logo-link {
+    display: flex;
+    align-items: center;
+  }
+  
+  /* Navigation Styling */
+  .navbar .navigation {
     display: flex;
     gap: 30px;
-}
-
-.navbar .navigation  a {
+  }
+  
+  .navbar .navigation a {
     color: rgba(5, 15, 15, 0.5);
     cursor: pointer;
     font-size: 15px;
     text-decoration: none;
-}
-.navbar .navigation  a:hover {
+    transition: 0.1s ease;
+  }
+  
+  .navbar .navigation a:hover {
     text-decoration: underline;
-}
-.navbar .button  {
+  }
+  
+  /* Button Styling */
+  .navbar .button {
     background-color: rgba(87, 191, 193, 1);
     color: white;
-    width: 194px ;
+    width: 194px;
     height: 48px;
-   display: flex;
-   justify-content: center;
-   align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 15px;
     gap: 10px;
-    transition: 0.10s ease;
-    
-}
-
-.navbar .button:hover {
+    transition: 0.1s ease;
+  }
+  
+  .navbar .button:hover {
     transform: scale(1.1);
-}
-.navbar .button a {
+  }
+  
+  .navbar .button a {
     text-decoration: none;
     color: white;
-}
-
-.menuButton img {
+  }
+  
+  /* Menu Button Styling */
+  .menuButton img {
     width: 39px;
-}
-.menuButton  {
+  }
+  
+  .menuButton {
     display: none;
-    background-color: white;
+    background-color: transparent;
     border: none;
-}
-
-@media (max-width: 868px) {
-    .navigation {
+  }
+  
+  /* Media Queries */
+  @media (max-width: 868px) {
+    .navbar .navigation {
       display: none;
       flex-direction: column;
       position: absolute;
       top: 100%;
       left: 0;
       width: 100%;
-      background-color: #444;
+      
+      background-color: rgba(255, 255, 255, 0.658);
+    backdrop-filter: blur(10px); /* Apply the blur effect */
       padding: 1rem 0;
     }
-    .button {
-        display: none !important;
+  
+    .navbar .navigation.active {
+      display: flex;
+      align-items: center;
+     
     }
+    .navigation a {
+        font-size: 30px;
+    }
+  
+    .navbar .button {
+      display: none !important;
+    }
+  
     .menuButton {
-        display: block;
+      display: block;
     }
-}  
+  }
+  
