--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 .main {
@@ -10,8 +11,11 @@
     margin-top: 50px; /* Adjust margin for mobile */
     padding: 0 20px;
     gap: 20px;
-    height: auto; /* Flexible height */
+    height: 100vh; /* Flexible height */
+   
 }
+
+    
 
 .main-left,
 .main-right {
@@ -25,41 +29,41 @@
 
 .main-left .text-main h6 {
     font-size: 16px;
-    
+    font-weight: 400;
     color: rgba(5, 15, 15, 0.7);
 }
 
 .main-right {
-    position: relative; /* Relative positioning for layering */
+    position: relative; 
     display: flex;
-    justify-content: center; /* Center images horizontally */
-    align-items: center; /* Center images vertically */
+    justify-content: center; 
+    align-items: center;
     height: auto;
 }
 
 .main-right img.background {
     width: 100%;
-    object-fit: cover; /* Maintain aspect ratio */
+    /* object-fit: cover;  */
     position: absolute;
     top: 0;
-    z-index: 1; /* Behind the shoe */
+    z-index: 1; 
 }
 
 .main-right img.shoe {
-    width: 70%; /* Resize for mobile */
+    width: 150%;
     position: relative;
-    right: 200px;
-    z-index: 2; /* In front of the background */
+   
+    z-index: 2; 
 }
 
-/* Desktop (Large Screens) */
+
 @media (min-width: 1024px) {
     .main {
-        flex-direction: row; /* Row layout for desktop */
+        flex-direction: row; 
         margin-top: 100px;
         padding: 0 60px;
         gap: 20px;
-        height: 100vh; /* Full viewport height */
+        height: 100vh; 
     }
 
     .main-left {
@@ -80,7 +84,7 @@
         position: absolute;
         top: 10px;
         right: 150px;
-        z-index: 1; /* Behind shoe */
+        z-index: 1; 
     }
 
     .main-right img.shoe {
@@ -88,6 +92,7 @@
         position: absolute;
         top: 10px;
         right: 30px;
-        z-index: 2; /* Above background */
+        z-index: 2; 
+        margin: auto;
     }
 }
