--- a/src/components/discounted/discounted.css
+++ b/src/components/discounted/discounted.css
@@ -44,7 +44,12 @@
     width: 350px;
     height: 150px;
     border-radius: 15px;
-    border: 2px solid rgb(23, 161, 207);
+    
+    transition: 0.1s ease;
+}
+
+.section2 .card:hover, .section3 .card:hover {
+    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
 }
 
 .section2 .card h5, .section3 .card h5 {
