--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,118 +1,130 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-  }
-  
-  .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    padding: 0 60px;
-    height: 73px;
-    position: sticky;
-    top: 0;
-    background-color: rgba(255, 255, 255, 0.658);
-    backdrop-filter: blur(10px); /* Apply the blur effect */
-    z-index: 999;
-  }
-  
-  /* Logo Styling */
-  .navbar .logo {
-    width: 49px;
-  }
-  
-  .navbar .logo-link {
-    display: flex;
-    align-items: center;
-  }
-  
-  /* Navigation Styling */
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 0 60px;
+  height: 73px;
+  position: sticky;
+  top: 0;
+  background-color: rgba(255, 255, 255, 0.658);
+  backdrop-filter: blur(10px);
+  /* Apply the blur effect */
+  z-index: 999;
+}
+
+/* Logo Styling */
+.navbar .logo {
+  width: 49px;
+}
+
+.navbar .logo-link {
+  display: flex;
+  align-items: center;
+}
+
+/* Navigation Styling */
+.navbar .navigation {
+  display: flex;
+  gap: 30px;
+}
+
+.navbar .navigation a {
+  color: rgba(5, 15, 15, 0.5);
+  cursor: pointer;
+  font-size: 15px;
+  text-decoration: none;
+  transition: 0.1s ease;
+}
+
+.navbar .navigation a:hover {
+  text-decoration: underline;
+}
+
+/* Button Styling */
+.navbar .button {
+  background-color: rgba(87, 191, 193, 1);
+  color: white;
+  width: 194px;
+  height: 48px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
+  gap: 10px;
+  transition: 0.1s ease;
+}
+
+.navbar .button:hover {
+  transform: scale(1.1);
+}
+
+.navbar .button a {
+  text-decoration: none;
+  color: white;
+}
+
+/* Menu Button Styling */
+.menuButton img {
+  width: 39px;
+}
+
+.menuButton {
+  display: none;
+  background-color: transparent;
+  border: none;
+}
+
+/* Media Queries */
+@media (max-width: 868px) {
   .navbar .navigation {
-    display: flex;
-    gap: 30px;
-  }
-  
-  .navbar .navigation a {
-    color: rgba(5, 15, 15, 0.5);
-    cursor: pointer;
-    font-size: 15px;
-    text-decoration: none;
-    transition: 0.1s ease;
-  }
-  
-  .navbar .navigation a:hover {
-    text-decoration: underline;
-  }
-  
-  /* Button Styling */
-  .navbar .button {
-    background-color: rgba(87, 191, 193, 1);
-    color: white;
-    width: 194px;
-    height: 48px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 15px;
-    gap: 10px;
-    transition: 0.1s ease;
-  }
-  
-  .navbar .button:hover {
-    transform: scale(1.1);
-  }
-  
-  .navbar .button a {
-    text-decoration: none;
-    color: white;
-  }
-  
-  /* Menu Button Styling */
-  .menuButton img {
-    width: 39px;
-  }
-  
-  .menuButton {
     display: none;
-    background-color: transparent;
-    border: none;
+    flex-direction: column;
+    position: absolute;
+    align-items: center;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+
+    background-color: rgba(255, 255, 255, 0.658);
+    backdrop-filter: blur(10px);
+  
+    padding: 1rem 0;
   }
-  
-  /* Media Queries */
-  @media (max-width: 868px) {
-    .navbar .navigation {
-      display: none;
-      flex-direction: column;
-      position: absolute;
-      align-items: center;
-      top: 100%;
-      left: 0;
-      width: 100%;
-      height: 100vh;
-      
-      background-color: rgba(255, 255, 255, 0.658);
-    backdrop-filter: blur(10px); /* Apply the blur effect */
-      padding: 1rem 0;
-    }
-  
-    .navbar .navigation.active {
-      display: flex;
-      align-items: center;
-     
-    }
-    .navigation .navi  a {
-        font-size: 50px;
-    }
-  
-    .navbar .button {
-      display: none !important;
-    }
-  
-    .menuButton {
-      display: block;
-    }
+
+  .navbar .navigation.active {
+    display: flex;
+    text-align: center;
+
+z-index: 1;
+
+
+    background-color: rgba(87, 191, 193, 1);
+
   }
-  
+
+  .navigation.active a {
+
+    color: white;
+
+    font-size: 20px;
+    text-align: center;
+  }
+
+
+  .navbar .button {
+    display: none;
+  }
+
+  .menuButton {
+    display: block;
+  }
+}
